syntax = "proto3";

option optimize_for = SPEED; // 加快解析
option java_package = "com.tuacy.netty.demo.protobuf.pro"; // 制定生产到那个包下
option java_outer_classname = "MyDataInfo"; // 外部类名称

// protobuf 可以使用message管理其他message

message MyMessage {

    // 定义一个枚举类型
    enum DataType {
        StudentType = 0; // 在proto3要求enum编号从0开始
        WorkerType = 1;
    }

    // 用data_type来标识传递的是哪一个枚举类型
    DataType data_type = 1;

    // 表示每次枚举类型最多只能出现其中的一个，节省空间
    oneof dataBody {
        Student student = 2;
        Worker worker = 3;
    }
}

message Student { // 会在外部类(StudentPOJO)生成一个内部类(Student)，他时真正发送的POJO对象
    int32 id = 1; // Student类中有一个属性，名字为id,类型为int32(protobuf类型) - > 对应java int 1表示属性序号
    string name = 2;
}

message Worker {
    string name = 1;
    int32 age = 2;
}
